# mhm2_kmer_analysis_v2

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeDefinitions.txt  CMakeLists.txt  ChangeLog.md  Dockerfile  README-Docker.md  README.md  README_v2.md  ReleaseInstructions.md  build.sh  count_kmers.sh  count_kmers_nopy.sh  kokkos_implementation.md  run_app.py  run_sample.sh
Docker/: Dockerfile-build  README-Docker.md
ci/: check_asm_quality.py  ci_asm_qual_test-full.sh  ci_asm_qual_test-tiny.sh  ci_asm_qual_test.sh  good-arctic-sample0-k31k63.txt  good-arctic-sample0-k63.txt  good-arctic-sample0.txt  good-arctic-sample0_tiny.txt  good-arcticsynth.txt  perlmutter.accuracy.sh  perlmutter.build.sh  perlmutter.validation.sh  ubuntu.accuracy.sh  ubuntu.build.sh  ubuntu.validation.sh
contrib/: CMakeLists.txt  all_adapters.fa  collect_comm_stats.cpp  interleave_fastq.c  trim_fastq.sh
contrib/environments/cori-haswell/: gnu.sh
contrib/environments/cori-knl/: gnu.sh
contrib/environments/crusher/: crusher_sample_batch.sh  gnu.sh
contrib/environments/dori/: env.sh
contrib/environments/expanse/: gnu.sh
contrib/environments/frontier/: gnu.sh
contrib/environments/linux/: gpu.sh  ibv.sh  smp.sh
contrib/environments/perlmutter/: cray-cpuonly.sh  cray-ofi.sh  cray.sh  gnu-cpuonly.sh  gnu-ofi.sh  gnu.sh  nvidia.sh
contrib/environments/spock/: gnu.sh
contrib/environments/summit/: gnu.sh
docs/: Makefile  mhm_guide.html  mhm_guide.md
point_tcf/: CMakeLists.txt
src/: CLI11.hpp  CMakeLists.txt  adapters.cpp  adapters.hpp  alignments.cpp  alignments.hpp  aln_depths.cpp  aln_depths.hpp  bytell_hash_map.hpp  contigging.cpp  contigging.hpp  contigs.cpp  contigs.hpp  dbjg_traversal.cpp  devices_gpu.cpp  devices_gpu.hpp  extern_template.in.cpp  fastq.cpp  fastq.hpp  flat_hash_map.hpp  gasnet_stats.cpp  gasnet_stats.hpp  hash_funcs.c  hash_funcs.h  histogrammer.cpp  histogrammer.hpp  kmer.cpp  linear_allocator_pool.cpp  linear_allocator_pool.hpp  main.cpp  merge_reads.cpp  mhm2.py  mhm2_parse_run_log.pl  mps-wrapper-perlmutter.sh  options.cpp  options.hpp  packed_reads.cpp  packed_reads.hpp  post_assembly.cpp  post_assembly.hpp  (+7 more)
src/cgraph/: build_ctg_graph.cpp  cgraph.cpp  ctg_graph.cpp  ctg_graph.hpp  spanner.cpp  splinter.cpp  walk_ctg_graph.cpp
src/gpu-utils/: CMakeLists.txt  gpu_common.cpp  gpu_common.hpp  gpu_compatiblity.hpp  gpu_utils.cpp  gpu_utils.hpp
src/kcount/: CMakeLists.txt  kcount.cpp  kcount.hpp  kcount_cpu.cpp  kcount_gpu.cpp  kmer_dht.cpp  kmer_dht.hpp
src/kcount/kcount-gpu/: CMakeLists.txt  gpu_hash_funcs.cpp  gpu_hash_table.cpp  gpu_hash_table.hpp  gqf.cpp  gqf.hpp  hashutil.cpp  parse_and_pack.cpp  partitioned_counter.cpp  partitioned_counter.hpp  tcf_hash_wrapper.hpp  tcf_wrapper.hpp
src/kcount/kcount-kokkos/: CMakeLists.txt  kokkos_gpu_hash_funcs.hpp  kokkos_gpu_ht.cpp  kokkos_gpu_ht.hpp  kokkos_pnp.cpp  kokkos_pnp.hpp
src/klign/: CMakeLists.txt  aligner_cpu.cpp  aligner_cpu.hpp  block_align_cpu.cpp  block_align_gpu.cpp  klign.cpp  klign.hpp
src/klign/adept-sw/: CMakeLists.txt  driver.cpp  driver.hpp  kernel.cpp  kernel.hpp
src/localassm/: CMakeLists.txt  localassm.cpp  localassm_core.cpp  localassm_core.hpp  localassm_cpu.cpp  localassm_gpu.cpp
src/localassm/localassm-gpu/: CMakeLists.txt  driver.cpp  driver.hpp  kernel.cpp  kernel.hpp  localassm_struct.hpp
src/ssw/: CMakeLists.txt  sse_to_altivec.hpp  ssw.cpp  ssw.hpp  ssw_core.cpp  ssw_core.hpp  ssw_to_altivec.hpp  vec128int.h  veclib_types.h
test/: CMakeLists.txt  ssw-test.cpp  test-rget.cpp
